// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base t-size-l"
      type="button"
    >
      <span
        class="t-button__text"
      >
         
      </span>
    </button>
    <span
      class="t-badge--dot"
    />
  </span>
  <span
    class="t-badge"
  >
    解锁新徽章
    <span
      class="t-badge--dot"
    />
  </span>
  <span
    class="t-badge"
  >
    <svg
      class="t-icon t-icon-user"
      fill="none"
      height="1em"
      style="font-size: 24px;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <span
      class="t-badge--dot"
    />
  </span>
</DocumentFragment>
`;

exports[`color.jsx 1`] = `
<DocumentFragment>
  <label
    class="t-checkbox"
  >
    <input
      class="t-checkbox__former"
      type="checkbox"
      value="1"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      红点样式
    </span>
  </label>
  <div>
    <span
      class="t-badge--static t-badge--dot"
      style="background-color: rgb(244, 67, 54);"
    />
    <span
      class="t-badge--static t-badge--dot"
      style="background-color: rgb(233, 30, 99);"
    />
    <span
      class="t-badge--static t-badge--dot"
      style="background-color: rgb(156, 39, 176);"
    />
    <span
      class="t-badge--static t-badge--dot"
      style="background-color: rgb(63, 81, 181);"
    />
    <span
      class="t-badge--static t-badge--dot"
      style="background-color: rgb(33, 150, 243);"
    />
    <span
      class="t-badge--static t-badge--dot"
      style="background-color: rgb(3, 169, 244);"
    />
    <span
      class="t-badge--static t-badge--dot"
      style="background-color: rgb(0, 188, 212);"
    />
    <span
      class="t-badge--static t-badge--dot"
      style="background-color: rgb(0, 150, 136);"
    />
    <span
      class="t-badge--static t-badge--dot"
      style="background-color: rgb(76, 175, 80);"
    />
    <span
      class="t-badge--static t-badge--dot"
      style="background-color: rgb(139, 195, 74);"
    />
    <span
      class="t-badge--static t-badge--dot"
      style="background-color: rgb(205, 220, 57);"
    />
    <span
      class="t-badge--static t-badge--dot"
      style="background-color: rgb(255, 235, 59);"
    />
    <span
      class="t-badge--static t-badge--dot"
      style="background-color: rgb(255, 193, 7);"
    />
    <span
      class="t-badge--static t-badge--dot"
      style="background-color: rgb(255, 152, 0);"
    />
    <span
      class="t-badge--static t-badge--dot"
      style="background-color: rgb(255, 87, 34);"
    />
    <span
      class="t-badge--static t-badge--dot"
      style="background-color: rgb(121, 85, 72);"
    />
    <span
      class="t-badge--static t-badge--dot"
      style="background-color: rgb(158, 158, 158);"
    />
    <span
      class="t-badge--static t-badge--dot"
      style="background-color: rgb(96, 125, 139);"
    />
  </div>
</DocumentFragment>
`;

exports[`custom.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-badge"
  >
    <div
      style="width: 40px; height: 40px; background: rgb(238, 238, 238); border: 1px solid #dcdcdc; box-sizing: border-box; border-radius: 3px;"
    />
    <span
      class="t-badge--dot"
    />
  </span>
  <span
    class="t-badge"
  >
    <div
      style="width: 40px; height: 40px; background: rgb(238, 238, 238); border: 1px solid #dcdcdc; box-sizing: border-box; border-radius: 3px;"
    />
    <span
      class="t-badge--circle"
    >
      hot
    </span>
  </span>
  <span
    class="t-badge"
  >
    <div
      style="width: 40px; height: 40px; background: rgb(238, 238, 238); border: 1px solid #dcdcdc; box-sizing: border-box; border-radius: 3px;"
    />
    <span
      class="t-badge--circle"
      style="background-color: rgb(0, 168, 112);"
    >
      new
    </span>
  </span>
  <span
    class="t-badge"
  >
    <div
      style="width: 40px; height: 40px; background: rgb(238, 238, 238); border: 1px solid #dcdcdc; box-sizing: border-box; border-radius: 3px;"
    />
    <span
      class="t-badge--round"
      style="background-color: rgb(0, 82, 217);"
    >
      100
    </span>
  </span>
</DocumentFragment>
`;

exports[`number.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base t-size-l"
      type="button"
    >
      <span
        class="t-button__text"
      >
         
      </span>
    </button>
    <span
      class="t-badge--circle"
    >
      2
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base t-size-l"
      type="button"
    >
      <span
        class="t-button__text"
      >
         
      </span>
    </button>
    <span
      class="t-badge--circle"
    >
      99
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base t-size-l"
      type="button"
    >
      <span
        class="t-button__text"
      >
         
      </span>
    </button>
    <span
      class="t-badge--circle"
    >
      99+
    </span>
  </span>
</DocumentFragment>
`;

exports[`offset.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        默认
      </span>
    </button>
    <span
      class="t-badge--circle"
    >
      2
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        [10,10]
      </span>
    </button>
    <span
      class="t-badge--circle"
      style="right: 10px; margin-top: 10px;"
    >
      2
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        [-10,10]
      </span>
    </button>
    <span
      class="t-badge--circle"
      style="right: -10px; margin-top: 10px;"
    >
      2
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        [-10,-10]
      </span>
    </button>
    <span
      class="t-badge--circle"
      style="right: -10px; margin-top: -10px;"
    >
      2
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        [10,-10]
      </span>
    </button>
    <span
      class="t-badge--circle"
      style="right: 10px; margin-top: -10px;"
    >
      2
    </span>
  </span>
</DocumentFragment>
`;

exports[`shape.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
         circle
      </span>
    </button>
    <span
      class="t-badge--circle"
    >
      2
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        round
      </span>
    </button>
    <span
      class="t-badge--round"
    >
      99
    </span>
  </span>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <h3
    style="margin-bottom: 16px;"
  >
    1.默认大小
  </h3>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        按钮
      </span>
    </button>
    <span
      class="t-badge--circle"
    >
      2
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        按钮
      </span>
    </button>
    <span
      class="t-badge--circle"
    >
      99
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        按钮
      </span>
    </button>
    <span
      class="t-badge--circle"
    >
      99+
    </span>
  </span>
  <h3
    style="margin-bottom: 16px; margin-top: 32px;"
  >
    2.小
  </h3>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        按钮
      </span>
    </button>
    <span
      class="t-badge--circle t-size-s"
    >
      2
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        按钮
      </span>
    </button>
    <span
      class="t-badge--circle t-size-s"
    >
      99
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        按钮
      </span>
    </button>
    <span
      class="t-badge--circle t-size-s"
    >
      99+
    </span>
  </span>
</DocumentFragment>
`;
